# DA_study_template_afornara

./: .gitignore  .gitmodules  install_python.sh  poetry_installation.sh  pyproject.toml
studies/scripts/: 1_create_study.py  config.yaml
studies/template_jobs/1_build_distr_and_collider/: 1_build_distr_and_collider.py  config.yaml
studies/template_jobs/2_configure_and_track/: 2_configure_and_track.py  _interactive_2_configure_and_track.py  config.yaml  test_collider.py  test_collider_comparison.py
