[project]
name = "da-boilerplate"
version = "0.1.0"

[tool.poetry]
description = "Dynamic aperture boilerplate for LHC (including HL-LHC) simulations"
authors = ["Colas Droin <andrea.fornara@cern.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
xmask = { path = "external_dependencies/xmask", develop = true }
tree-maker = { git = "https://github.com/xsuite/tree_maker.git" }
setuptools = "^80.0.0"
wheel = "^0.45.0"

xsuite   = "0.45.11"
xtrack   = "0.98.9"
xpart    = "0.23.5"
xfields  = "0.25.8"
xobjects = "0.5.12"
xdeps    = "0.10.10"
xcoll    = "0.8.0"

fastparquet  = "2025.12.0"
cupy-cuda11x = "13.6.0"
psutil       = "7.1.3"
cpymad       = "1.18.1"
nafflib      = "2.1.1"
numpy        = "2.3.5"
pandas       = "2.3.3"
pyarrow      = "22.0.0"
fsspec       = "2025.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
